--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "omise": "^0.8.5",
-    "request": "^2.88.2"
+    "omise": "^0.8.5"
   }
 }
